--- a/GroceryList/index.html
+++ b/GroceryList/index.html
@@ -21,7 +21,7 @@
 </head>
 <body ng-controller="HomeController">
 <div style="text-align:center">
-<b>tip:</b> you'll need webserver to see ng-view correctly
+<b>tip:</b> you'll need to view on webserver for angular to work correctly
 </div>
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
