--- a/Coffee Project/drinks.html
+++ b/Coffee Project/drinks.html
@@ -77,6 +77,7 @@
             <td>1/3 espresso and 2/3 steamed milk</td>
             <td>A specialty in Australia and New Zealand. The foam is often decorated with a motif.</td>
         </tr>
+        </table>
         <footer>
             <nav>
                 <ul>
