--- a/GroceryList/index.html
+++ b/GroceryList/index.html
@@ -1,48 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" ng-app='groceryListApp'>
+<html ng-app="groceryListApp">
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Bootstrap 101 Template</title>
-
-	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
+    <title>Grocery List</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body ng-controller="HomeController">
-<div style="text-align:center">
-<b>tip:</b> you'll need to view on webserver for angular to work correctly
-</div>
-	<nav class="navbar navbar-inverse">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#">
-					<span class="glyphicon glyphicon-apple" style="color:#5bdb48"></span>
-					{{appTitle}}
-				</a>
-			</div>
-		</div>
-	</nav>
-
-	<div class="container" ng-view>
-		
-	</div>
-
-	<script src="lib/jquery.min.js"></script>
-	<script src="lib/bootstrap.min.js"></script>
-	<script src="lib/underscore.min.js"></script>
-	<script src="lib/angular.min.js"></script>
-	<script src="lib/angular-route.min.js"></script>
-	<script src="js/app.js"></script>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#/">
+                    <span class="glyphicon glyphicon-apple" style="color: #5bdb48"></span> Grocery List
+                </a>
+            </div>
+        </div>
+    </nav>
+    <div class="container" ng-view>
+    </div>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/underscore.js"></script>
 </body>
+
 </html>
